# the_z_engine

./: CMakeLists.txt  README.md  run.sh  shell.nix
lib/glad/include/glad/: glad.h
src/: main.cpp
src/shaders/include/: shader.h
src/shaders/src/: shader.cpp
src/window/include/: window.h
src/window/src/: Window.cpp  window.cpp
